# vail-verifier-extension

./: .gitignore  Cargo.toml  build.sh  manifest_v2.json  manifest_v3.json  package.json  run_wasm.js  setupWorker.js  test.html  webpack.config.cjs  webpack.config.js  worker.js
src/: download_files.rs  lib.rs  util.rs
test/: download_files_test.rs
