[package]
name = "vail-verifier-extension"
version = "0.1.0"
authors = ["mnshah"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
zkml = { git = "https://github.com/kobigurk/zkml", branch="kobigurk/wav-for-browser"}
hex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response"
]