[package]
name = "vail-verifier-extension"
version = "0.1.0"
authors = ["mnshah"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.1"
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.23"
console_error_panic_hook = "0.1.7"
zkml = { git = "https://github.com/kobigurk/zkml", branch = "kobigurk/wav-for-browser" }
hex = "0.4.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response"
]